--- a/config/grafana/datasources.yml
+++ b/config/grafana/datasources.yml
@@ -6,8 +6,13 @@ datasources:
     access: proxy
     url: http://prometheus:9090
     isDefault: true
+    jsonData:
+      timeInterval: 15s
 
   - name: Loki
     type: loki
     access: proxy
     url: http://loki:3100
+    isDefault: false
+    jsonData:
+      maxLines: 1000
