--- a/config/loki/loki-config.yml
+++ b/config/loki/loki-config.yml
@@ -2,39 +2,39 @@ auth_enabled: false
 
 server:
   http_listen_port: 3100
+  log_level: info
 
 ingester:
+  chunk_idle_period: 3m
+  chunk_retain_period: 1m
   lifecycler:
     ring:
       kvstore:
         store: inmemory
       replication_factor: 1
 
+limits_config:
+  enforce_metric_name: false
+  reject_old_samples: true
+  reject_old_samples_max_age: 168h
+
 schema_config:
   configs:
     - from: 2020-10-24
-      store: boltdb-shipper
+      store: tsdb
       object_store: filesystem
-      schema: v11
+      schema: v12
       index:
         prefix: index_
         period: 24h
 
 storage_config:
-  boltdb_shipper:
-    active_index_directory: /loki/boltdb-shipper-active
-    cache_location: /loki/boltdb-shipper-cache
+  tsdb_shipper:
+    active_index_directory: /loki/tsdb-shipper-active
+    cache_location: /loki/tsdb-shipper-cache
     shared_store: filesystem
   filesystem:
     directory: /loki/chunks
 
-limits_config:
-  reject_old_samples: true
-  reject_old_samples_max_age: 168h
-
-chunk_store_config:
-  max_look_back_period: 0s
-
-table_manager:
-  retention_deletes_enabled: false
-  retention_period: 0s
+retention_enabled: true
+retention_period: 168h
