fix: Set correct user and storage paths for Loki
- Set Loki container to run as user 10001 (default Loki user)
- Fixes 'mkdir /var/loki: permission denied' error
- Simplify storage paths to work with mounted /loki volume
- Use standard /loki/index, /loki/cache, /loki/chunks directories

Loki runs as user 'loki' with UID 10001, so container must use that user
to have write permissions on the volume.

--- a/config/loki/loki-config.yml
+++ b/config/loki/loki-config.yml
@@ -29,7 +29,7 @@ schema_config:
 
 storage_config:
   tsdb_shipper:
-    active_index_directory: /loki/tsdb-shipper-active
-    cache_location: /loki/tsdb-shipper-cache
+    active_index_directory: /loki/index
+    cache_location: /loki/cache
   filesystem:
     directory: /loki/chunks
