--- a/config/loki/loki-config.yml
+++ b/config/loki/loki-config.yml
@@ -7,11 +7,18 @@ server:
 ingester:
   chunk_idle_period: 3m
   chunk_retain_period: 1m
+  max_chunk_age: 1h
   lifecycler:
     ring:
       kvstore:
         store: inmemory
       replication_factor: 1
+    num_tokens: 128
+    heartbeat_timeout: 5m
+  wal:
+    enabled: true
+    dir: /loki/wal
+    checkpoint_duration: 5m
 
 limits_config:
   reject_old_samples: true
