fix: Disable compactor module in Loki
- Explicitly specify modules: ingester, distributor, querier
- Compactor is unnecessary for single-node setup and requires /var/loki access
- Remove compactor from config

Fixes: 'mkdir /var/loki: permission denied' error by disabling
the compactor module entirely

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,7 +49,9 @@ services:
     volumes:
       - ./config/loki/loki-config.yml:/etc/loki/local-config.yaml:ro
       - loki_data:/loki
-    command: -config.file=/etc/loki/local-config.yaml
+    command:
+      - -config.file=/etc/loki/local-config.yaml
+      - -modules=ingester,distributor,querier
     expose:
       - 3100
     networks:
