fix: Use Loki 3.5.9 stable version
- Pin to stable v3.5.9 (previous stable branch)
- Latest 3.6.4 has compactor and other modules that conflict with our simple setup
- 3.5.9 is proven stable with simpler module requirements

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,16 +42,14 @@ services:
       - "com.example.description=Grafana monitoring dashboard"
 
   loki:
-    image: grafana/loki:latest
+    image: grafana/loki:3.5.9
     container_name: monitoring_loki
     restart: unless-stopped
     user: "10001"
     volumes:
       - ./config/loki/loki-config.yml:/etc/loki/local-config.yaml:ro
       - loki_data:/loki
-    command:
-      - -config.file=/etc/loki/local-config.yaml
-      - -modules=ingester,distributor,querier
+    command: -config.file=/etc/loki/local-config.yaml
     expose:
       - 3100
     networks:
