--- a/config/loki/loki-config.yml
+++ b/config/loki/loki-config.yml
@@ -7,7 +7,6 @@ server:
 ingester:
   chunk_idle_period: 3m
   chunk_retain_period: 1m
-  max_chunk_age: 1h
   lifecycler:
     ring:
       kvstore:
@@ -21,16 +20,23 @@ limits_config:
 schema_config:
   configs:
     - from: 2020-10-24
-      store: tsdb
+      store: boltdb-shipper
       object_store: filesystem
-      schema: v13
+      schema: v11
       index:
         prefix: index_
         period: 24h
 
 storage_config:
-  tsdb_shipper:
-    active_index_directory: /loki/index
-    cache_location: /loki/cache
+  boltdb_shipper:
+    active_index_directory: /loki/boltdb-shipper-active
+    cache_location: /loki/boltdb-shipper-cache
+    shared_store: filesystem
   filesystem:
     directory: /loki/chunks
+
+compactor:
+  working_directory: /loki/compactor
+  shared_store: filesystem
+  compaction_interval: 10m
+  retention_enabled: false
