--- a/config/loki/loki-config.yml
+++ b/config/loki/loki-config.yml
@@ -16,6 +16,7 @@ ingester:
 limits_config:
   reject_old_samples: true
   reject_old_samples_max_age: 168h
+  allow_structured_metadata: false
 
 schema_config:
   configs:
