--- a/config/loki/loki-config.yml
+++ b/config/loki/loki-config.yml
@@ -7,11 +7,14 @@ server:
 ingester:
   chunk_idle_period: 3m
   chunk_retain_period: 1m
+  max_chunk_age: 1h
   lifecycler:
     ring:
       kvstore:
         store: inmemory
       replication_factor: 1
+  wal:
+    enabled: false
 
 limits_config:
   reject_old_samples: true
