fix: Put Node Exporter on docker network for Prometheus connectivity
- Remove network_mode: host from node-exporter
- Add node-exporter to default docker network
- Add healthcheck to cAdvisor
- Allows prometheus to reach node-exporter via container DNS

Fixes: 'bad address node-exporter:9100' error in prometheus

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,7 +85,8 @@ services:
       - /:/rootfs:ro
     expose:
       - 9100
-    network_mode: host
+    networks:
+      - default
     environment:
       - NODE_ID=node-1
 
@@ -106,6 +107,11 @@ services:
     networks:
       - default
     privileged: true
+    healthcheck:
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:8080/api/v1.3/machine"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
 
 volumes:
   prometheus_data:
