optimize: Reduce cAdvisor CPU usage with longer housekeeping intervals
- Set housekeeping_interval to 10s (default 1s)
- Set max_housekeeping_interval to 1m
- Reduces CPU polling frequency from every 1s to every 10s
- Expected ~50% reduction in cAdvisor CPU usage

Trade-off: Metrics collected every 10s instead of 1s, but sufficient
for trend analysis and monitoring purposes.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -104,6 +104,9 @@ services:
       - 8080
     devices:
       - /dev/kmsg
+    command:
+      - --housekeeping_interval=10s
+      - --max_housekeeping_interval=1m
     networks:
       - default
     privileged: true
