feat: Comment Loki logs

--- a/config/loki/loki-config.yml
+++ b/config/loki/loki-config.yml
@@ -38,6 +38,10 @@ storage_config:
   filesystem:
     directory: /loki/chunks
 
+table_manager:
+  retention_deletes_enabled: true
+  retention_period: 168h
+
 compactor:
   working_directory: /loki/compactor
   compaction_interval: 10m
