--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,6 @@ services:
     restart: unless-stopped
     depends_on:
       - prometheus
-      - loki
     environment:
       - GF_SECURITY_ADMIN_USER=${GF_SECURITY_ADMIN_USER:-admin}
       - GF_SECURITY_ADMIN_PASSWORD=${GF_SECURITY_ADMIN_PASSWORD:-changeme}
@@ -41,34 +40,34 @@ services:
     labels:
       - "com.example.description=Grafana monitoring dashboard"
 
-  loki:
-    image: grafana/loki:3.5.9
-    container_name: monitoring_loki
-    restart: unless-stopped
-    user: "10001"
-    volumes:
-      - ./config/loki/loki-config.yml:/etc/loki/local-config.yaml:ro
-      - loki_data:/loki
-    command: -config.file=/etc/loki/local-config.yaml
-    expose:
-      - 3100
-    networks:
-      - default
+  # loki:
+  #   image: grafana/loki:3.5.9
+  #   container_name: monitoring_loki
+  #   restart: unless-stopped
+  #   user: "10001"
+  #   volumes:
+  #     - ./config/loki/loki-config.yml:/etc/loki/local-config.yaml:ro
+  #     - loki_data:/loki
+  #   command: -config.file=/etc/loki/local-config.yaml
+  #   expose:
+  #     - 3100
+  #   networks:
+  #     - default
 
-  promtail:
-    image: grafana/promtail:latest
-    container_name: monitoring_promtail
-    restart: unless-stopped
-    depends_on:
-      - loki
-    volumes:
-      - ./config/promtail/promtail-config.yml:/etc/promtail/config.yml:ro
-      - /var/run/docker.sock:/var/run/docker.sock:ro
-      - /var/lib/docker/containers:/var/lib/docker/containers:ro
-      - /var/log:/var/log:ro
-    command: -config.file=/etc/promtail/config.yml
-    networks:
-      - default
+  # promtail:
+  #   image: grafana/promtail:latest
+  #   container_name: monitoring_promtail
+  #   restart: unless-stopped
+  #   depends_on:
+  #     - loki
+  #   volumes:
+  #     - ./config/promtail/promtail-config.yml:/etc/promtail/config.yml:ro
+  #     - /var/run/docker.sock:/var/run/docker.sock:ro
+  #     - /var/lib/docker/containers:/var/lib/docker/containers:ro
+  #     - /var/log:/var/log:ro
+  #   command: -config.file=/etc/promtail/config.yml
+  #   networks:
+  #     - default
 
   node-exporter:
     image: prom/node-exporter:latest
@@ -121,8 +120,8 @@ volumes:
     driver: local
   grafana_data:
     driver: local
-  loki_data:
-    driver: local
+  # loki_data:
+  #   driver: local
 
 networks:
   default:
